<resources>
    <string name="app_name">路悠悠运货</string>

    <string name="tv_driver">司机版</string>
    <string name="tv_switch">点击切换</string>
    <string name="tv_shipper">货主版</string>
    <string name="tv_ownner">车主</string>
    <string name="shipper">货主</string>
    <string name="tv_level">4.9</string>
    <string name="tv_name">游客</string>
    <string name="tv_getorder">承接运单：111</string>
    <string name="tv_sendcar">发布车源：111</string>
    <string name="myorder">我的运单</string>
    <string name="mymoney">我的钱包</string>
    <string name="mycertification">我的认证</string>
    <string name="tv_certification">（未认证）</string>
    <string name="tv_clinchdeal">待成交(0)</string>
    <string name="tv_alclinchdeal">已成交(0)</string>
    <string name="tv_receivegoods">待收货(0)</string>
    <string name="tv_alreadyfinish">已完成(0)</string>
    <string name="tv_balance">账户余额</string>
    <string name="tv_topup">充值、提现</string>
    <string name="tv_set">设置</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="open_voice_broadcast_remind">开启语音播报提醒</string>
    <string name="voice_broadcast_time">语音播放时间</string>
    <string name="tv_help">帮助中心</string>
    <string name="help">帮助</string>
    <string name="tv_question">其他问题咨询客服微信“123456789”</string>
    <string name="version_update">版本更新</string>
    <string name="version_search">正在检查版本更新...</string>
    <string name="version_newest">当前版本已是最新版!</string>
    <string name="version_new">有新版本!</string>
    <string name="about">关于</string>
    <string name="exit">退出此账号</string>
    <string name="driver_certification">司机认证</string>
    <string name="information_certification">角色认证可提升信用度</string>
    <string name="your_name">姓名</string>
    <string name="id_number">身份证号</string>
    <string name="license_plate_number">车牌号</string>
    <string name="models">车型</string>
    <string name="load">载重</string>
    <string name="head_portrait">头像</string>
    <string name="identity_certification">身份证照</string>
    <string name="drive_license">驾驶证照</string>
    <string name="driving_license">行驶证照</string>
    <string name="headstock_according">车头照</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="submit">提交</string>
    <string name="replace">替换</string>
    <string name="saves">保存</string>
    <string name="company_name">公司名称</string>
    <string name="your_position">职位</string>
    <string name="company_address">公司地址</string>
    <string name="business_card">名片</string>
    <string name="door_head">门头照</string>
    <string name="business_license">营业执照</string>
    <string name="shipper_certification">货主认证</string>

    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="btn_login">登陆</string>
    <string name="registered">立即注册</string>
    <string name="maximum_of_pwd_num">输入6~30位字母或数字</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="caroptions">车源</string>
    <string name="supply_goods">货源</string>
    <string name="show_supply_goods">发布货源</string>
    <string name="show_caroptions">发布车源</string>
    <string name="show_route">路线</string>
    <string name="show_me">我的</string>
    <string name="restart_getcode">重新获取</string>

</resources>
