<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.returnlive.app.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_gravity="center"
        android:background="@color/pink"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_set"
            android:textSize="@dimen/px25"
            android:textColor="@color/write"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView android:id="@+id/tv_modify_login_password"
                style="@style/TextViewStyle"
                android:background="@drawable/btn_sel"
                android:drawableRight="@drawable/ic_right"
                android:text="@string/modify_login_password" />

            <View style="@style/ViewStyle"/>

            <TextView android:id="@+id/tv_modify_pay_password"
                style="@style/TextViewStyle"
                android:background="@drawable/btn_sel"
                android:drawableRight="@drawable/ic_right"
                android:text="@string/modify_pay_password" />

            <View style="@style/ViewStyle"/>


            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/write"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_open_voice_broadcast_remind"
                    style="@style/TextViewStyle"
                    android:layout_weight="1"
                    android:text="@string/open_voice_broadcast_remind" />

                <CheckBox android:id="@+id/chb_open_voice_broadcast_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/white"
                    android:button="@drawable/checkbox"
                    android:layout_marginRight="@dimen/px40"/>
            </com.zhy.autolayout.AutoLinearLayout>

            <View style="@style/ViewStyle"/>

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/lay_voice_broadcast_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sel"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_voice_broadcast_time"
                    style="@style/TextViewStyle"
                    android:layout_weight="1"
                    android:text="@string/voice_broadcast_time" />

                <TextView android:id="@+id/tv_broadcastTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00~23:00"
                    android:textSize="@dimen/px35"
                    android:layout_marginRight="@dimen/px10"
                    android:textColor="@color/green" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/px40"/>

            </com.zhy.autolayout.AutoLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px20"
                    android:background="#E9EDEE"/>

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/lay_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sel"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_help"
                    style="@style/TextViewStyle"
                    android:layout_weight="1"
                    android:text="@string/tv_help" />

                <TextView android:id="@+id/tv_helpquestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_question"
                    android:textSize="@dimen/px25"
                    android:layout_marginRight="@dimen/px10" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/px40"/>

            </com.zhy.autolayout.AutoLinearLayout>

            <View style="@style/ViewStyle"/>

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/lay_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sel"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_version_update"
                    style="@style/TextViewStyle"
                    android:layout_weight="1"
                    android:text="@string/version_update" />

                <TextView android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_search"
                    android:textSize="@dimen/px25"
                    android:textColor="@color/orrange"
                    android:layout_marginRight="@dimen/px10" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/px40"/>

            </com.zhy.autolayout.AutoLinearLayout>

            <View style="@style/ViewStyle"/>

            <TextView android:id="@+id/tv_about"
                style="@style/TextViewStyle"
                android:background="@drawable/btn_sel"
                android:drawableRight="@drawable/ic_right"
                android:text="@string/about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px20"
                android:background="#E9EDEE"/>

            <TextView android:id="@+id/tv_exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit"
                android:gravity="center"
                android:background="@drawable/btn_sel"
                android:padding="@dimen/px20"
                android:textSize="@dimen/px35"
                android:textColor="@color/orrange"/>

        </com.zhy.autolayout.AutoLinearLayout>
    </ScrollView>
</com.zhy.autolayout.AutoLinearLayout>
