<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_certification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.returnlive.app.CertificationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/certification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_gravity="center"
        android:background="@color/snow"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView android:id="@+id/img_backcer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_certification"
            android:textSize="@dimen/px30"
            android:textColor="@color/write"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px30"
            android:textSize="@dimen/px25"
            android:text="@string/help"/>

        </com.zhy.autolayout.AutoRelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/px25"
        android:textSize="@dimen/px30"
        android:text="@string/information_certification"
        android:drawableLeft="@drawable/ic_cerfication_warning"
        android:id="@+id/textView5" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/write"
            android:layout_margin="@dimen/px10"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_yourname"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            <TextView android:id="@+id/tv_yourname"
                style="@style/TextViewStyle"
                android:text="@string/your_name"
                android:singleLine="true"
                android:layout_margin="@dimen/px10"
                android:drawableRight="@drawable/ic_right"
                android:background="@drawable/shape_border"/>

            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_yourIDcard"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView android:id="@+id/tv_yourIDcard"
                style="@style/TextViewStyle"
                android:text="@string/id_number"
                android:layout_margin="@dimen/px10"
                android:singleLine="true"
                android:drawableRight="@drawable/ic_right"
                android:background="@drawable/shape_border"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_yourCardId"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView android:id="@+id/tv_yourCardId"
                style="@style/TextViewStyle"
                android:text="@string/license_plate_number"
                android:layout_margin="@dimen/px10"
                android:singleLine="true"
                android:drawableRight="@drawable/ic_right"
                android:background="@drawable/shape_border"/>
            </com.zhy.autolayout.AutoRelativeLayout>


            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_yourCarStatus"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView android:id="@+id/tv_yourCarStatus"
                style="@style/TextViewStyle"
                android:text="@string/models"
                android:layout_margin="@dimen/px10"
                android:singleLine="true"
                android:drawableRight="@drawable/ic_right"
                android:background="@drawable/shape_border"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_yourcarWeight"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView android:id="@+id/tv_yourcarWeight"
                style="@style/TextViewStyle"
                android:text="@string/load"
                android:layout_margin="@dimen/px10"
                android:singleLine="true"
                android:drawableRight="@drawable/ic_right"
                android:background="@drawable/shape_border"/>
            </com.zhy.autolayout.AutoRelativeLayout>






        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/px10"
            android:orientation="vertical">


            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_portrait"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/tv_portrait"
                    style="@style/TextViewStyle"
                    android:text="@string/head_portrait"
                    android:layout_margin="@dimen/px10"
                    android:drawableRight="@drawable/ic_right"
                    android:background="@drawable/shape_border"/>
                <ImageView android:id="@+id/img_portrait"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/px85"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_identity_certification"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/tv_identity_certification"
                    style="@style/TextViewStyle"
                    android:text="@string/identity_certification"
                    android:layout_margin="@dimen/px10"
                    android:drawableRight="@drawable/ic_right"
                    android:background="@drawable/shape_border"/>
                <ImageView android:id="@+id/idCard1"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_toLeftOf="@+id/idCard2"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/px10"/>


                <ImageView android:id="@+id/idCard2"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/px85"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_drive_license"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/tv_drive_license"
                    style="@style/TextViewStyle"
                    android:text="@string/drive_license"
                    android:layout_margin="@dimen/px10"
                    android:drawableRight="@drawable/ic_right"
                    android:background="@drawable/shape_border"/>

                <ImageView  android:id="@+id/img_driverPic"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_marginRight="@dimen/px85"
                    android:layout_centerVertical="true"
                    android:layout_alignEnd="@+id/tv_drive_license"
                    android:layout_marginEnd="37dp"
                     />
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_driving_license"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/tv_driving_license"
                    style="@style/TextViewStyle"
                    android:text="@string/driving_license"
                    android:layout_margin="@dimen/px10"
                    android:drawableRight="@drawable/ic_right"
                    android:background="@drawable/shape_border"/>
                <ImageView android:id="@+id/img_drivingPic"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/px85"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:id="@+id/lay_headstock_according"
                android:background="@drawable/btn_sel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/tv_headstock_according"
                    style="@style/TextViewStyle"
                    android:text="@string/headstock_according"
                    android:layout_margin="@dimen/px10"
                    android:drawableRight="@drawable/ic_right"
                    android:background="@drawable/shape_border"/>

                <ImageView android:id="@+id/img_carPic"
                    android:layout_width="@dimen/px50"
                    android:layout_height="@dimen/px50"
                    android:src="@drawable/ic_camera"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/px85"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <TextView android:id="@+id/tv_contact_customer_service"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/contact_customer_service"
        android:textSize="@dimen/px40"
        android:gravity="center"
        android:textColor="@color/green"
        android:padding="@dimen/px20"/>


    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green_sel"
        android:layout_margin="@dimen/px20"
        android:text="@string/submit"/>

</com.zhy.autolayout.AutoLinearLayout>
