<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg"
    android:fitsSystemWindows="true"
    tools:context="com.returnlive.app.LoginActivity">



    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/lay_name"
        android:layout_width="600px"
        android:layout_height="85px"
        android:gravity="center_vertical"
        android:background="@mipmap/bg_alpha"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="600px">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/users"
            android:layout_marginRight="@dimen/px20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px25"/>

        <EditText android:id="@+id/edt_username"
            android:layout_width="410px"
            android:layout_height="80px"
            android:gravity="center_vertical"
            android:hint="@string/login_username"
            android:layout_toRightOf="@+id/tv"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:inputType="phone"
            android:maxLength="11"
            android:text="18795934365"
            android:background="@null"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/img_loging_delect1"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_toRightOf="@+id/edt_username"
           android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_delect"
            android:visibility="gone"/>

    </com.zhy.autolayout.AutoRelativeLayout>


    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/lay_pdword"
        android:layout_width="600px"
        android:layout_height="85px"
        android:gravity="center_vertical"
        android:background="@mipmap/bg_alpha"
        android:layout_alignTop="@+id/lay_name"
        android:layout_alignLeft="@+id/lay_name"
        android:layout_alignStart="@+id/lay_name"
        android:layout_marginTop="100px">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/passwords"
            android:layout_marginRight="@dimen/px20"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px25"/>

        <EditText android:id="@+id/edt_password"
            android:layout_width="410px"
            android:layout_height="80px"
            android:gravity="center_vertical"
            android:background="@null"
            android:layout_toRightOf="@+id/tv2"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:text="123456"
            android:textColor="@color/white"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/img_loging_password_delect"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_toRightOf="@+id/edt_password"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_delect"
            android:visibility="gone"/>

    </com.zhy.autolayout.AutoRelativeLayout>

    <Button android:id="@+id/btn_login"
        android:layout_width="600px"
        android:layout_height="88px"
        android:layout_below="@+id/lay_pdword"
        android:layout_alignLeft="@+id/lay_pdword"
        android:layout_alignStart="@+id/lay_pdword"
        android:layout_marginTop="30px"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:background="@drawable/btn_select"
        android:textSize="20sp"/>

    <TextView android:id="@+id/tv_forgetpwds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码？"
        android:textSize="35px"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_marginTop="45px" />

    <View android:id="@+id/xian"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px02"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120px"
        android:layout_marginRight="@dimen/px60"
        android:layout_marginLeft="@dimen/px60"/>

    <TextView android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registered"
        android:textColor="@color/white"
        android:textSize="@dimen/px40"
        android:layout_marginTop="@dimen/px30"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/xian"/>

<!--加载页面-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rel_login"
        android:layout_width="260px"
        android:layout_height="250px"
        android:layout_above="@+id/v"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410px"
        android:visibility="gone"
        android:background="@drawable/shape_loading">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifView_login"
            android:layout_width="260px"
            android:layout_height="260px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-20px"
            android:scaleType="centerInside"
            android:src="@mipmap/loaging">
        </pl.droidsonroids.gif.GifImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20px"
            android:text="请稍后.."
            android:textColor="#fff"
            android:textSize="28px" />
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoRelativeLayout>
